--- a/WEB/1 Lab/2_number_variant-14.html
+++ b/WEB/1 Lab/2_number_variant-14.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Форма с чекбоксами и радиокнопками</title>
+    <title>Г”Г®Г°Г¬Г  Г± Г·ГҐГЄГЎГ®ГЄГ±Г Г¬ГЁ ГЁ Г°Г Г¤ГЁГ®ГЄГ­Г®ГЇГЄГ Г¬ГЁ</title>
 </head>
 <body>
 
     <form>
-        <h2>Выберите свои любимые фрукты:</h2>
+        <h2>Г‚Г»ГЎГҐГ°ГЁГІГҐ Г±ГўГ®ГЁ Г«ГѕГЎГЁГ¬Г»ГҐ ГґГ°ГіГЄГІГ»:</h2>
 
         <label>
-            <input type="checkbox" name="fruits" value="apple"> Яблоко
+            <input type="checkbox" name="fruits" value="apple"> ГџГЎГ«Г®ГЄГ®
         </label><br>
 
         <label>
-            <input type="checkbox" name="fruits" value="banana"> Банан
+            <input type="checkbox" name="fruits" value="banana"> ГЃГ Г­Г Г­
         </label><br>
 
         <label>
-            <input type="checkbox" name="fruits" value="orange"> Апельсин
+            <input type="checkbox" name="fruits" value="orange"> ГЂГЇГҐГ«ГјГ±ГЁГ­
         </label><br><br>
 
-        <h2>Выберите свой пол:</h2>
+        <h2>Г‚Г»ГЎГҐГ°ГЁГІГҐ Г±ГўГ®Г© ГЇГ®Г«:</h2>
 
         <label>
-            <input type="radio" name="gender" value="male"> Мужской
+            <input type="radio" name="gender" value="male"> ГЊГіГ¦Г±ГЄГ®Г©
         </label><br>
 
         <label>
-            <input type="radio" name="gender" value="female"> Женский
+            <input type="radio" name="gender" value="female"> Г†ГҐГ­Г±ГЄГЁГ©
         </label><br><br>
 
-        <input type="submit" value="Отправить">
+        <input type="submit" value="ГЋГІГЇГ°Г ГўГЁГІГј">
     </form>
 
 </body>
